--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -2,6 +2,7 @@
       --color-green: #38c588;
       --color-blue: #0080a3;
       --vp-c-indigo-1: var(--color-blue);
+      --vp-c-indigo-2: var(--color-green);
       --vp-home-hero-name-color: transparent;
       --vp-home-hero-name-background: -webkit-linear-gradient( 120deg, var(--color-blue) 30%, var(--color-green));
       --vp-home-hero-image-background-image: linear-gradient(-45deg, var(--color-blue) 50%, var(--color-green) 50%);
